...
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val MAIN_TAB = "MainTab"
  const val PROJECTLIST_TAB = "ProjectListTab"
  const val SEARCH_TAB = "SearchTab"
  const val SELECT_MESSAGES_TAB = "SelectMessages"
  const val OTHER_USER = "OtherUser"
  const val PROFILE_BUTTON = "ProfileButton"

  const val MESSAGE_BUTTON = "MessageButton"
}

